<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Headings and Quote">

        <EditTextPreference
            android:key="heading_preference"
            android:title="@string/set_heading"
            android:summary="@string/set_heading_summary"
            android:dialogTitle="@string/set_heading" />

        <EditTextPreference
            android:key="subheading_preference"
            android:title="@string/set_subheading"
            android:summary="@string/set_subheading_summary"
            android:dialogTitle="@string/set_subheading" />

        <EditTextPreference
            android:key="quote_preference"
            android:title="@string/set_quote"
            android:summary="@string/set_quote_summary"
            android:dialogTitle="@string/set_quote" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Background Image">

        <EditTextPreference
            android:key="password_preference"
            android:title="@string/set_password"
            android:summary="@string/set_password_summary"
            android:digits="0123456789"
            android:dialogTitle="@string/set_password" />>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Background Image">

        <Preference
            android:key="background_preference"
            android:title="@string/set_background"
            android:summary="@string/set_background_summary" />

    </PreferenceCategory>

</PreferenceScreen>